<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_price"/>
        <EditText
            android:id="@+id/price_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/price"
            android:autofillHints="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <TextView
            android:id="@+id/sale_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"/>
        <TextView
            android:id="@+id/current_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"/>
        <SeekBar
            android:id="@+id/scroll"
            android:layout_width="180dp"
            android:layout_height="22dp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">
        <RadioButton
            android:id="@+id/radio_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_d"/>
        <RadioButton
            android:id="@+id/radio_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_e"/>
        <RadioButton
            android:id="@+id/radio_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_f"/>
    </RadioGroup>
    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="OK"/>
</LinearLayout>